# monfari

./: .envrc  .gitignore  Cargo.toml  flake.nix  msgs-json.md  toolchain.toml
.sqlx/: query-0fb55f75c6f773ad4e9f8f5c81e943f17a4038ad990d61a8553a0431fddb73d2.json  query-290781de26112e2e2af13c424f55ff303f31a37825513c0a6b0dda2d79a9c9a6.json  query-4ee729147bd635badbf8ce6c4c63b72c8b69242e76b02193fd815bd7b6805872.json  query-8bfdd79abc021401a8b9a2c7eca83739425538309ee3d3eb1d6b982c08ad0a35.json  query-90b9c26e24e7e499a1686ea16dcbc34b25a1df4bec688c2e40b325d26003f3fc.json  query-91e4dc2aed87e19c9603d3689b5eb4630fe7c341eff9bb15b299c5f2d43c0711.json  query-9b24a3922c3e99adf5d92807d6566170248e70556c5170b31e6076584229fd01.json  query-b2cfb7185a6485bca80e736aaf02c7ae7f6ca54917bcb590b748608abb1e7dc5.json  query-c950274525c1796b3bbf1fd670e926cbfdec22870d11474671b15e5531c075d8.json
migrations/: 20231208000243_init.sql
src/: command.rs  main.rs  repl.rs  repository.rs  types.rs
src/repository/: local.rs  remote.rs  sql.rs
