[package]
name = "monfari"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.23", features = ["derive", "env"] }
color-eyre = "0.6.2"
comfy-table = "7.0.1"
edit = "0.1.4"
eyre = "0.6.8"
itertools = "0.11.0"
nu-ansi-term = "0.49.0"
proqnt = "0.1.0"
reedline = "0.23.0"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
toml = "0.7.6"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
ulid = "1.0.0"
