[package]
name = "monfari"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
clap = { version = "4.3.23", features = ["derive", "env"] }
color-eyre = "0.6.2"
comfy-table = "7.0.1"
edit = "0.1.4"
eyre = "0.6.8"
futures = "0.3.29"
itertools = "0.11.0"
nu-ansi-term = "0.49.0"
proqnt = "0.1.0"
reedline = "0.23.0"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.32.0", features = ["full"] }
toml = "0.7.6"
tower-http = { version = "0.4.4", features = ["trace"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
ulid = "1.0.0"
ureq = { version = "2.7.1", features = ["json"] }

[target."cfg(unix)".dependencies]
nix = { version = "0.27.1", features = ["socket"] }
